@@ -3,6 +3,7 @@ Revision history for Perl extension Net::Ping::External.
 - trailing dot for unexistent host in test (Marcin Gryszkalis)
 - SCO OpenServer added
 - tests will not fail if nonexisting domain resolves
+- detect Windows ping under Cygwin
 
 0.13 Dec 18 2008
 - Small fixes in test
